# stellatron

./: .gitignore  archimedes.scad  bearing.scad  cone.scad  crennell.scad  deltahedron.scad  dodecatron.scad  fidget.scad  functions.scad  golden.scad  hook.scad  numbers.scad  nutter.scad  onetwenty.scad  plug.scad  projection.py  sort.scad  splitting.scad  stand.scad  stellatron.md  stellatron.py  stellatron.scad  transform.scad  vector.py
components/: Cargo.toml  halframe.scad
components/src/: components.rs  jet.rs  lib.rs  nipple.rs  normal.rs  spinner.rs  spool.rs  stage1.rs  stage3.rs
solids/: archimedes.scad  crennell.scad  cube-stand.scad  cubeoct-stand.scad  cubeoctohedron.scad  dodeca-stand.scad  dodecahedron.py  dodecahedron.scad  dodecatron.scad  functions.scad  great_dodecahedron.scad  great_icosohedron.scad  gs_dodecehdron.scad  icoso-stand.scad  icosohedron.py  icosohedron.scad  numbers.scad  octohedron.scad  quinttetra.py  quinttetra.scad  rhombicubeoctohedron.scad  smstell_dodecahedron.scad  snubcube.scad  splitting.scad  stella_octohedron.scad  stellatron.md  stellatron.py  stellatron.scad  tetra-stand.scad  tetrahedron.scad  trunc_cube.py  trunc_cube.scad  trunc_octohedron.scad  trunc_tetrahedron.py  trunc_tetrahedron.scad  vector.py
src/: normal.rs  spool.rs  stage1.rs
